# tosca

./: .codecov.yml  .gitignore  .gitmodules  .golangci.yml  .testcoverage.yml  BUILD.md  Jenkinsfile  LICENSE  Makefile  README.md  go.mod  go.sum
.github/workflows/: cpp-linter.yml  cpp-tests.yml  go-linter.yml  go.yml  rust.yaml
cpp/cmake/: tosca_coverage.cmake
cpp/common/: assert.h  hash_utils.h  hash_utils_benchmark.cc  lru_cache.h  lru_cache_test.cc  macros.h
cpp/vm/evmzero/: allocator.cc  evmzero.cc  interpreter.cc  interpreter.h  interpreter_test.cc  logger.h  memory.cc  memory.h  memory_test.cc  observer.h  opcodes.cc  opcodes.h  profiler.h  profiler_test.cc  sha3_cache.h  sha3_cache_benchmark.cc  stack.cc  stack.h  stack_test.cc  uint256.h  uint256_test.cc
go/ct/: evm.go  evm_fuzz_test.go  evm_test.go  staticcheck.conf
go/ct/common/: address.go  address_test.go  bytes.go  bytes_test.go  delegator_designator.go  delegator_designator_test.go  error.go  hash.go  hash_test.go  immutable_hash_array.go  immutable_hash_array_test.go  revisions.go  revisions_test.go  slices.go  slices_test.go  u256.go  u256_test.go
go/ct/driver/: generator_info.go  list.go  main.go  probe.go  regressions.go  run.go  stats.go  stats_test.go  test.go
go/ct/rlz/: conditions.go  conditions_test.go  consumer.go  domains.go  domains_test.go  effect.go  effect_test.go  expressions.go  expressions_test.go  parameters.go  parameters_test.go  property.go  rules.go  rules_test.go  test_value.go  test_value_test.go
go/ct/spc/: enumeration.go  enumeration_test.go  specification.go  specification_map.go  specification_mock.go  specification_test.go  staticcheck.conf
go/ct/st/: accounts.go  accounts_test.go  block_context.go  block_context_test.go  call_context.go  call_context_test.go  call_journal.go  call_journal_test.go  code.go  code_test.go  logs.go  memory.go  memory_test.go  serialization.go  serialization_integration_test.go  serialization_test.go  stack.go  stack_test.go  state.go  state_test.go  storage.go  storage_test.go  transaction_context.go  transaction_context_test.go  (+2 more)
go/examples/: analysis.go  arithmetic.go  example.go  fib.go  inc.go  memory.go  sha3.go  static_overhead.go
go/geth_adapter/: adapter.go  adapter_test.go  adapter_test_mocks.go  state_db.go  state_db_test.go
go/integration_test/: keccak.go  keccak_test.go
go/processor/: test_utils.go  test_utils_test.go
go/tosca/: errors.go  errors_test.go  interpreter.go  interpreter_mock.go  interpreter_registry.go  interpreter_registry_test.go  processor.go  processor_mock.go  processor_registry.go  processor_registry_test.go  revisions.go  revisions_test.go  types.go  types_test.go  utils.go  utils_test.go  world_state.go  world_state_mock.go  world_state_test.go
rust/: BUILD.md  Cargo.toml
rust/bencher/: Cargo.toml
rust/benchmarks/: Cargo.toml
rust/benchmarks/benches/: interpreter.rs
rust/benchmarks/src/: lib.rs  main.rs
rust/driver/: Cargo.toml
rust/driver/src/: host_interface.rs  lib.rs
rust/evmc-vm/: Cargo.toml  README.md
rust/evmc-vm/src/: container.rs  lib.rs  types.rs
rust/fuzz/: Cargo.toml
rust/fuzz/fuzz_targets/: evmc_execute.rs
rust/llvm-profile-wrappers/: Cargo.toml
rust/src/: evmc.rs  evmrs.rs  interpreter.rs  lib.rs
rust/src/ffi/: evmc_vm.rs  mod.rs  steppable_evmc_vm.rs
rust/src/types/: amount.rs  cache.rs  code_analysis.rs  code_reader.rs  execution_context.rs  hash_cache.rs  memory.rs  mock_execution_message.rs  mod.rs  observer.rs  op_fn_data.rs  opcode.rs  stack.rs  status_code.rs  tx_context.rs
rust/src/utils/: gas.rs  helpers.rs
rust/tests/: ffi.rs
scripts/license/: license_header.txt
(+110 files in other folders)
